munin (2.999.9-2) UNRELEASED; urgency=medium

  * Use the new debhelper-compat(=11) notation and drop d/compat.

 -- Holger Levsen <holger@debian.org>  Sat, 13 Oct 2018 13:34:42 +0100

munin (2.999.9-1) experimental; urgency=medium

  [ Lars Kruse ]
  * New upstream beta release (2.999.9)
  * munin and munin-node: use separate maintscript files
  * convert old doc directories (before "link-doc") to symlinks
    (Closes: #881713)
  * Add missing package "munin-plugins-java".
    (it was provided by the munin 2.0 package before)
  * d/rules: use $(MAKE) instead of "make"
  * autopkgtest: update embedded "sharness" from 0.3 to 1.0
    (Thanks to Christian Göttsche:
     https://github.com/munin-monitoring/munin/issues/844)
  * autopkgtest: adjust paths and calling parameters
  * d/tests: use "set -eu" in test scripts
    (Thanks, Christian Göttsche)
  * Replace embedded copy of "sharness" with test dependency
  * Bump Standards-Version to 4.2.1, no changes needed.
  * Specify "Rules-Requires-Root" as "no"
  * Fix trivial spelling mistakes below debian/ (thanks "codespell")
  * Fix minor whitespace inconsistencies in NEWS and README files
  * Skip munin init script in systemd environment (the created
    directories are generated via systemd-tmpfiles)
  * Plugins mysql_*: switch "mysqluser" from "debian-sys-maint" to "root"
    (Closes: #862238, #864845)
  * Patch for Makefile: set INSTALL if necessary
  * Fix issues related to "Rules-Requires-Root"
  * Patch for upstream problem in LimitsOld.pm
  * Change copyright file to DEP-5 format (thanks, lintian)
  * Patch configuration handling for "munin-limits"
  * Revive /etc/munin/plugin-conf.d/munin-node
    (it is missing since commit 11f5659344 - uploaded as 2.999.3-1)
  * Add Depends for libcache-cache-perl to munin-plugins-mysql
    (Thanks, Christian Göttsche)
  * Add Recommends for libnet-ldap-perl to munin-plugins-ldap
    (Thanks, Christian Göttsche)
  * Add multiple Suggests for munin-plugins-extra