@@ -1,11 +1,0 @@
-#!/bin/sh
-
-set -eu
-
-cd "$(dirname $0)"
-
-if [ -z "${ADTTMP:-}" ]; then
-  tempdir="$(mktemp -d --suffix=.autopkgtest)"
-fi
-
-prove -v *.t
